k8s/middleware-api.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip-prefix
  namespace: calcu-streamlit-app
spec:
  stripPrefix:
    prefixes:
      - /api
