k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: calcu-streamlit-app
  labels:
    app: backend
    component: api
    env: prod
spec:
  replicas: 1 # En PROD mejor 2 para tener alta disponibilidad
  selector:
    matchLabels:
      app: backend
      component: api
  template:
    metadata:
      labels:
        app: backend
        component: api
    spec:
      # Indispensable para que PROD pueda bajar la imagen con tu token
      imagePullSecrets:
        - name: regcred
      containers:
      - name: backend
        image: icorujo/calcu-streamlit-app-backend:1.0.3 # <--- VERSIÓN FIJA
        imagePullPolicy: Always # Más eficiente en PROD
        ports:
        - containerPort: 8000
        resources: # Ajustamos límites para PROD
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
