k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: calcu-streamlit-app
  labels:
    app: frontend
    component: ui
    env: prod
spec:
  replicas: 1 # Alta disponibilidad en producción
  selector:
    matchLabels:
      app: frontend
      component: ui
  template:
    metadata:
      labels:
        app: frontend
        component: ui
    spec:
      # Credenciales para descargar la imagen desde Docker Hub
      imagePullSecrets:
        - name: regcred
      containers:
      - name: frontend
        image: icorujo/calcu-streamlit-app-frontend:1.0.0 # Versión fija
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
          initialDelaySeconds: 45
          periodSeconds: 15
