k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: calcu-streamlit-app
spec:
  selector:
    app: backend
    component: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP # Solo visible dentro del clúster (el Frontend llegará aquí)
