k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: calcu-streamlit-app
spec:
  selector:
    app: frontend
    component: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP # En PROD el Ingress se encarga de exponerlo al puerto 80
